--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
+        <nav class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav5"
+                    aria-controls="navbarNav5" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="fa-solid fa-bars fa-2x"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav5">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="navbar-text" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-text" href="#">MENU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-text" href="#">ORDER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-text" href="#">NEWS</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <main>
         <section id="landing">
             <div class="landing-container">
