--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav5">
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <h1>Pastiche</h1>
+                        </li>
+                        <li class="nav-item">
                             <a class="navbar-text" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
