fix: api key renamed

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const mapIframe = document.getElementById('google-map');
-            mapIframe.src = `https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=${apiKey}`;
+            mapIframe.src = `https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=${APIKEY}`;
         });
     </script>
 </body>
