fix: accessing api key

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section id="contact">
             <div class="contact-container">
                 <div class="left-col">
-                    <iframe id="google-map" loading="lazy" allowfullscreen src=""></iframe>
+                    <iframe id="google-map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=${{secrets.APIKEY}}"></iframe>
                 </div>
                 <div class="right-col">
                     <h3 class="subtext"> CONTACT </h3>
@@ -198,12 +198,12 @@
         </section>
 
     </main>
-    <script src="config.js"></script>
+    <!-- <script src="config.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const mapIframe = document.getElementById('google-map');
             mapIframe.src = `https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=${APIKEY}`;
         });
-    </script>
+    </script> -->
 </body>
 </html>
