--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
         <section id="contact">
             <div class="contact-container">
                 <div class="left-col">
-                    <iframe id="google-map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=${{secrets.APIKEY}}"></iframe>
+                    <p>https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=`${{secrets.APIKEY}}`</p>
+                    <iframe id="google-map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=AIzaSyAjrqQ-OnOi-AdNzf8JE1zonGsBk0boqi0"></iframe>
                 </div>
                 <div class="right-col">
                     <h3 class="subtext"> CONTACT </h3>
