--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pastiche Fine Desserts</title>
+    <!-- add favicon -->
+    <link rel="icon" href="/resources/images/favicon.png">
     <!-- import style sheet -->
     <link rel="stylesheet" href="resources/styles.css" />
     <!-- import bootstrap -->
@@ -159,7 +161,6 @@
         <section id="contact">
             <div class="contact-container">
                 <div class="left-col">
-                    <p>https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=`${{secrets.APIKEY}}`</p>
                     <iframe id="google-map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=AIzaSyAjrqQ-OnOi-AdNzf8JE1zonGsBk0boqi0"></iframe>
                 </div>
                 <div class="right-col">
