fix: changed footer

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <p class="subtext">INFO</p>
                     <a href="#" class="body-text">News</a>
                     <a href="#" class="body-text">Refund Policy</a>
-                    <a href="#" class="body-text">The Shop</a>
+                    <a href="#" class="body-text">Careers</a>
                 </div>
                 <div class="logo-container">
                     <img src="resources/images/initial-logo.png" alt="Pastiche Initial Logo" />
