feat: added aria labels and alt

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,22 +24,22 @@
                     aria-controls="navbarNav5" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="fa-solid fa-bars fa-2x"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav5">
+                <div class="collapse navbar-collapse" id="navbarNav5" aria-label="Navbar collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <h1>Pastiche</h1>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-text" href="#">HOME</a>
+                            <a class="navbar-text" href="#" aria-label="Click to go home">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-text" href="#">MENU</a>
+                            <a class="navbar-text" href="#" aria-label="Click to view the full menu">MENU</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-text" href="#">ORDER</a>
+                            <a class="navbar-text" href="#" aria-label="Click to order">ORDER</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-text" href="#">NEWS</a>
+                            <a class="navbar-text" href="#" aria-label="Click to view our news">NEWS</a>
                         </li>
                     </ul>
                 </div>
@@ -60,19 +60,19 @@
                     <div id="carouselImages" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                            <img src="resources/images/storefront-1.jpg" class="d-block w-100" alt="...">
+                            <img src="resources/images/storefront-1.jpg" class="d-block w-100" alt="Pastiche storefront" aria-description="Photo of Pastiche's storefront">
                             </div>
                             <div class="carousel-item">
-                            <img src="resources/images/cafe-2.jpg" class="d-block w-100" alt="...">
+                            <img src="resources/images/cafe-2.jpg" class="d-block w-100" alt="Pastiche cafe" aria-description="Photo of Pastiche's inside cafe">
                             </div>
                             <div class="carousel-item">
-                            <img src="resources/images/owners-3.jpg" class="d-block w-100" alt="...">
+                            <img src="resources/images/owners-3.jpg" class="d-block w-100" alt="Pastiche's founders" aria-description="Photo of Pastiche's founders, Eileen and Brandt">
                             </div>
                             <div class="carousel-item">
-                            <img src="resources/images/baker-4.jpg" class="d-block w-100" alt="...">
+                            <img src="resources/images/baker-4.jpg" class="d-block w-100" alt="One of Pastiche's bakers" aria-description="Photo of a Pastiche baker in action">
                             </div>
                             <div class="carousel-item">
-                            <img src="resources/images/baking-5.jpg" class="d-block w-100" alt="...">
+                            <img src="resources/images/baking-5.jpg" class="d-block w-100" alt="Two of Pastiche's bakers" aria-description="Two of Pastiche's bakers making pie crust">
                             </div>
                         </div>
                     </div>
@@ -91,23 +91,23 @@
                 <a href="#" id="menu" class="subtext">FULL MENU</a>
                 <div class="favorite-desserts" >
                     <div class="card">
-                        <img src="resources/images/fruit-tart.png" alt="Card image cap">
+                        <img src="resources/images/fruit-tart.png" alt="Fruit tart">
                         <p class="body-text">Fruit Tart</p>
                     </div>
                     <div class="card">
-                        <img src="resources/images/vanilla-bean-cheesecake.png" alt="Card image cap">
+                        <img src="resources/images/vanilla-bean-cheesecake.png" alt="Vanilla bean cheesecake">
                         <p class="body-text">Vanilla Bean Cheesecake</p>
                     </div>
                     <div class="card">
-                        <img src="resources/images/tiramisu.png" alt="Card image cap">
+                        <img src="resources/images/tiramisu.png" alt="Tiramisu cake">
                         <p class="body-text">Tiramisu</p>
                     </div>
                     <div class="card">
-                        <img src="resources/images/torta-di-cioccolatta.png" alt="Card image cap">
+                        <img src="resources/images/torta-di-cioccolatta.png" alt="Torta di cioccolatta">
                         <p class="body-text">Torta di Cioccolatta</p>
                     </div>
                     <div class="card">
-                        <img src="resources/images/all-american-chocolate.png" alt="Card image cap">
+                        <img src="resources/images/all-american-chocolate.png" alt="All american chocolate cake">
                         <p class="body-text">All American Chocolate Cake</p>
                     </div>
                 </div>
@@ -115,53 +115,53 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="card">
-                                <img src="resources/images/fruit-tart.png" alt="Card image cap">
+                                <img src="resources/images/fruit-tart.png" alt="Fruit tart">
                                 <p class="body-text">Fruit Tart</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card">
-                                <img src="resources/images/vanilla-bean-cheesecake.png" alt="Card image cap">
+                                <img src="resources/images/vanilla-bean-cheesecake.png" alt="Vanilla bean cheesecake">
                                 <p class="body-text">Vanilla Bean Cheesecake</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card">
-                                <img src="resources/images/tiramisu.png" alt="Card image cap">
+                                <img src="resources/images/tiramisu.png" alt="Tiramisu cake">
                                 <p class="body-text">Tiramisu</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card">
-                                <img src="resources/images/torta-di-cioccolatta.png" alt="Card image cap">
+                                <img src="resources/images/torta-di-cioccolatta.png" alt="Torta di cioccolatta">
                                 <p class="body-text">Torta di Cioccolatta</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card">
-                                <img src="resources/images/all-american-chocolate.png" alt="Card image cap">
+                                <img src="resources/images/all-american-chocolate.png" alt="All american chocolate cake">
                                 <p class="body-text">All American Chocolate Cake</p>
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselFavorites" role="button" data-bs-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselFavorites" role="button" data-bs-slide="prev" aria-label="Previous">
                         <span class="fa-solid fa-chevron-left" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselFavorites" role="button" data-bs-slide="next">
+                    <a class="carousel-control-next" href="#carouselFavorites" role="button" data-bs-slide="next" aria-label="Next">
                         <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
                 <a href="https://order.toasttab.com/online/pastiche-fine-desserts" target="blank">
-                    <button class="btn btn-primary btn-lg">~ORDER ONLINE~</button>
+                    <button class="btn btn-primary btn-lg" aria-label="Button click to order online">~ORDER ONLINE~</button>
                 </a>
             </div>
         </section>
         <section id="contact">
             <div class="contact-container">
                 <div class="left-col">
-                    <iframe id="google-map" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=AIzaSyAjrqQ-OnOi-AdNzf8JE1zonGsBk0boqi0"></iframe>
+                    <iframe id="google-map" loading="lazy" allowfullscreen title="Google Maps pin location of Pastiche Fine Desserts" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJvRVLAQtF5IkRRVd5lTRCQ0Q&key=AIzaSyAjrqQ-OnOi-AdNzf8JE1zonGsBk0boqi0"></iframe>
                 </div>
                 <div class="right-col">
                     <h3 class="subtext"> CONTACT </h3>
@@ -182,9 +182,9 @@
                 <div class="footer-info">
                     <p class="subtext">CONTACT</p>
                     <p class="body-text">401-861-5190</p>
-                    <li><a href="https://www.instagram.com/pasticheri" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/PasticheRI" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.facebook.com/pastichefinedesserts" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/pasticheri" target="_blank" aria-label="Click to visit our Instagram"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/PasticheRI" target="_blank"  aria-label="Click to visit our Twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.facebook.com/pastichefinedesserts" target="_blank" aria-label="Click to visit our Facebook"><i class="fa fa-facebook"></i></a></li>
                 </div>
                 <div class="footer-info">
                     <p class="subtext">INFO</p>
